CSC-466 Language Processing/Final/yaac/prepos.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | Program '\n'

    5 Program: PairList '.'

    6 PairList: %empty
    7         | PairList Pair

    8 Pair: '(' PairList ')'
    9     | '{' PairList '}'
   10     | '[' PairList ']'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'(' (40) 8
')' (41) 8
'.' (46) 5
'[' (91) 10
']' (93) 10
'{' (123) 9
'}' (125) 9
error (256)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
input (12)
    on left: 1 2, on right: 0 2
line (13)
    on left: 3 4, on right: 2
Program (14)
    on left: 5, on right: 4
PairList (15)
    on left: 6 7, on right: 5 7 8 9 10
Pair (16)
    on left: 8 9 10, on right: 7


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end  shift, and go to state 2
    '\n'  shift, and go to state 3

    $default  reduce using rule 6 (PairList)

    line      go to state 4
    Program   go to state 5
    PairList  go to state 6


State 2

    0 $accept: input $end .

    $default  accept


State 3

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 4

    2 input: input line .

    $default  reduce using rule 2 (input)


State 5

    4 line: Program . '\n'

    '\n'  shift, and go to state 7


State 6

    5 Program: PairList . '.'
    7 PairList: PairList . Pair

    '.'  shift, and go to state 8
    '('  shift, and go to state 9
    '{'  shift, and go to state 10
    '['  shift, and go to state 11

    Pair  go to state 12


State 7

    4 line: Program '\n' .

    $default  reduce using rule 4 (line)


State 8

    5 Program: PairList '.' .

    $default  reduce using rule 5 (Program)


State 9

    8 Pair: '(' . PairList ')'

    $default  reduce using rule 6 (PairList)

    PairList  go to state 13


State 10

    9 Pair: '{' . PairList '}'

    $default  reduce using rule 6 (PairList)

    PairList  go to state 14


State 11

   10 Pair: '[' . PairList ']'

    $default  reduce using rule 6 (PairList)

    PairList  go to state 15


State 12

    7 PairList: PairList Pair .

    $default  reduce using rule 7 (PairList)


State 13

    7 PairList: PairList . Pair
    8 Pair: '(' PairList . ')'

    '('  shift, and go to state 9
    ')'  shift, and go to state 16
    '{'  shift, and go to state 10
    '['  shift, and go to state 11

    Pair  go to state 12


State 14

    7 PairList: PairList . Pair
    9 Pair: '{' PairList . '}'

    '('  shift, and go to state 9
    '{'  shift, and go to state 10
    '}'  shift, and go to state 17
    '['  shift, and go to state 11

    Pair  go to state 12


State 15

    7 PairList: PairList . Pair
   10 Pair: '[' PairList . ']'

    '('  shift, and go to state 9
    '{'  shift, and go to state 10
    '['  shift, and go to state 11
    ']'  shift, and go to state 18

    Pair  go to state 12


State 16

    8 Pair: '(' PairList ')' .

    $default  reduce using rule 8 (Pair)


State 17

    9 Pair: '{' PairList '}' .

    $default  reduce using rule 9 (Pair)


State 18

   10 Pair: '[' PairList ']' .

    $default  reduce using rule 10 (Pair)
